apps/nas/homeassistant-assist/assist-llm-gpu/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: assist-llm-gpu-private
  namespace: homeassistant-assist
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "assist-llm.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: assist-llm-gpu-predictor
      port: 80
    timeouts:
      request: 300s
      backendRequest: 300s
